--- a/report/report.tex
+++ b/report/report.tex
@@ -129,7 +129,7 @@
 
      Из-за наличия разных представлений одних и тех же знаний наряду с проблемой соответствия этих представлений друг другу встает задача преобразования одних представлений в другие. 
 
-    В данной дипломной работе предполагается создать программное средство, которое будет автоматизировать преобразование знаний систем планирования из текстового PDDL-представления в графическое представление в виде UML-моделей. Получение UML-представления может быть полезно, так как:
+    В данной дипломной работе предполагается создать программное средство, которое будет автоматизировать преобразование представлений знаний систем планирования из текстового (PDDL-представления) в графическое (в виде UML-моделей). Получение UML-представления может быть полезно, так как:
     \begin{itemize}
         \item UML-модели более наглядны, составлять UML базы знаний могут эксперты, не знакомые с PDDL;
         \item UML-модель может быть отредактирована в UML-редакторе, и при необходимости её можно транслировать в другие языки (Java, PDDL, и~ др.);
@@ -159,7 +159,7 @@
                  
 
         
-\begin{figure}[h]
+\begin{figure}[!h]
     \hfill
     \begin{minipage}[h]{0.40\linewidth}
         {\raggedright
@@ -239,7 +239,7 @@
    
 \begin{figure}[h]
     \center{\includegraphics[width=1\linewidth]{property-tasks}}
-    \caption{Пример преобразования задач}
+    \caption{Пример преобразования состояний}
     \label{img:property-tasks}
 \end{figure}   
            
@@ -274,14 +274,14 @@
             and not p2.hold->includes(f)
         post
             self.hasLeft
-            and self.hold->includes(f)
+            and self.hold = self.hold@pre->including(f)
             and not self.hungry
            \end{verbatim}
         \end{minipage}
 
     \begin{center}
         \begin{minipage}{0.8\linewidth}
-            \caption{Преобразование действий  на примере $getLeft$ с ограничениями на OCL}
+            \caption{Один из вариантов преобразования действий с ограничениями на OCL на примере $getLeft$ }
         \end{minipage}    
     \end{center}
 
@@ -366,7 +366,7 @@
 \subsection*{Другие средства}
      Подавляющее большинство инструментов, реализующих преобразование каких-либо текстовых данных в UML-модели, существует для работы с языками программирования, как правило, объектно-ориентированными, а не с языками представления знаний. Поэтому, использование этих инструментов для решения поставленной задачи невозможно.  
     
-    В далеком 2005 создавалось средство GIPO (Graphical Interface for Planning with Objects)~--- графический интерфейс для планирования с объектами. Среди его возможностей было: поддержка классического планирования, HTN (иерархические  сети задач), поддержка длительных действий, различные редакторы для создания описаний предметных областей и задач планирования, статический анализ и динамическое тестирование плана, встроенные и сторонние планировщики и трансляция в PDDL. К сожалению, там была предложена своя графическая нотация, не имеющая никакого отношения к UML. Ныне проект заброшен.   
+    В далеком 2005 создавалось средство GIPO (Graphical Interface for Planning with Objects)\cite{gipo}~--- графический интерфейс для планирования с объектами. Среди его возможностей было: поддержка классического планирования, HTN (иерархические  сети задач), поддержка длительных действий, различные редакторы для создания описаний предметных областей и задач планирования, статический анализ и динамическое тестирование плана, встроенные и сторонние планировщики и трансляция в PDDL. К сожалению, там была предложена своя графическая нотация, не имеющая никакого отношения к UML. Ныне проект заброшен.   
     
 \section*{Исследование и построение решения задачи}
    
@@ -404,6 +404,12 @@ proving to problem solving // Artificial Intelligence}. 1971. 2. P. 189-208.
 \bibitem{icaps-2}
 \textbf{Vaquero T.S., Costa C., Tonidandel F., Igreja H., Silva J.R., Beck J.C.} Planning and Scheduling Ship Operations on Petroleum Ports and Platforms. // Proceedings of the ICAPS 2012 Workshop on Scheduling and Planning Applications (SPARK). 2012. pp. 8-16.
 
+\bibitem{use}
+\textbf{Gogolla M., Büttner F., Richter M.}. \textit{USE: A UML-Based Specification Environment for Validating UML and OCL.} Science of Computer Programming, 69:27-34, 2007.
+
+\bibitem{gipo}
+Graphical Interface for Planning with Objects. GIPO project. \textit{(http://planform.hud.ac.uk/gipo/gipo\_home.html)} 
+
 \bibitem{mal-manz}
 \textbf{Малышко В. В., Манжосов А. Н.} Решение задач инженерии знаний средствами объектно-ориентированной инженерии программного обеспечения. // Программные системы и инструменты. Тематический сборник No 13. М.: Изд-во факультета ВМиК МГУ, 2012. С. 44-54.
 
@@ -421,6 +427,8 @@ Object Management Group MOF Model to Text Transformation Language, v 1.0 2008 \t
 
 \bibitem{antlr}
 \textbf{Terence Parr.} \textit{ The Definitive ANTLR 4 Reference}, 2013. 328p.
+
+
 
 
 
